--- a/amsterdam/index2.html
+++ b/amsterdam/index2.html
@@ -18,10 +18,10 @@
 			-->
 		</link>
 	
-		<script type="text/javascript" src="./leaflet.js"></script>
+		<script src="./leaflet-src.js"></script>
 
 <!--
-		<script src="./leaflet-src.js"></script>
+		<script type="text/javascript" src="./leaflet.js"></script>
 		<script src="./leaflet2.js"></script>
 
 		<script src="./leaflet.gl.js"></script>
@@ -325,7 +325,7 @@ crossorigin=""
 						return file;
 					}
 
-					return("http://83.83.222.154/brussel_tiles/skull.png");
+					return("http://83.83.222.154/amsterdam_tiles/skull.png");
 
 <!--						return "http://83.83.222.154/cgi-bin/texture.cgi?skull.jpg";
 
